--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="img/favicon.png" type="image/png">
+
         <title>Sunset Drive</title>
-
-        <meta name="facebook-domain-verification" content="ajt7rfgs8roykv1bj5nrhurjfxdj75" />
-
+        
+        <link rel="icon" type="image/png" href="favicon/favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+        <link rel="shortcut icon" href="favicon/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+        <link rel="manifest" href="favicon/site.webmanifest" />
+        
         <meta name="description" content="Sunset Drive" />
         <meta name="keywords" content="Sunset Drive" />
         <meta name="author" content="Deft Flamink" />
