--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <DOCTYPE html>
 
     <head>
-        <meta charset="utf-8" />
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
         <title>Sunset Drive</title>
         <meta name="description" content="Sunset Drive" />
         <meta name="keywords" content="Sunset Drive" />
@@ -29,7 +32,7 @@
 
     <body>
 
-        <div class="container text-center">
+        <div class="container-fluid text-center">
             <div class="row">
                 <div class="col-4">
                     <br>
@@ -43,9 +46,10 @@
             </div>
 
             <br>
-            
-            <div class="container text-center">
+
+            <div class="container-fluid text-center">
                 <div class="row">
+                    <h1>Sunset Drive Séptima Edición</h1>
                     <div class="col">
 
                         <button type="button" class="btn btn-primary btn-lg sunset_btn ">ENTRADAS</button>
@@ -62,7 +66,7 @@
 
             <br>
 
-            <div class="container text-center">
+            <div class="container-fluid text-center">
 
                 <div class="row">
                     <div class="col">
