--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                     <h1>Sunset Drive Séptima Edición</h1>
                     <div class="col">
 
-                        <button type="button" class="btn btn-primary btn-lg sunset_btn ">ENTRADAS</button>
+                        <a type="button" class="btn btn-primary btn-lg sunset_btn" href="http://sunsetdrive.com.ar/entradas" target="_blank" >ENTRADAS</a>
 
                     </div>
                     <div class="col">
 
-                        <button type="button" class="btn btn-primary btn-lg sunset_btn">INSCRIPCIONES</button>
+                        <a type="button" class="btn btn-primary btn-lg sunset_btn" href="http://sunsetdrive.com.ar/" target="_blank" >INSCRIPCIONES</a>
 
                     </div>
                 </div>
