--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
     <body>
         <br>
 
+        <div class="container-fluid text-center">
+            <br>
+            <div class="row">
+                <div class="col">
+                    <img id="img" src="img/logo.png" class="img-fluid logo" alt="">
+                </div>
+                </div>
+            </div>
+
+            <br>
+
             <div class="container-fluid text-center">
                 <div class="row">
                     <h1>Sunset Drive Séptima Edición</h1>
@@ -62,24 +73,6 @@
                 </div>
             </div>
         </div>
-
-        <div class="container-fluid text-center">
-            <br>
-            <div class="row">
-                <div class="col-4">
-                    <br>
-                </div>
-                <div class="col-4">
-                    <img id="img" src="img/logo.png" class="img-fluid" alt="">
-                </div>
-                <div class="col-4">
-                    <br>
-                </div>
-            </div>
-
-            <br>
-
-
 
 
 
