--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <br>
             <div class="row">
                 <div class="col">
-                    <img id="img" src="img/logo.png" class="img-fluid logo" alt="">
+                    <img src="img/logo.png" class="img-fluid logo" alt="">
                 </div>
                 </div>
             </div>
