new btn inscripcionnes

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                         <a type="button" class="btn btn-primary btn-lg sunset_btn" href="http://sunsetdrive.com.ar/entradas" target="_blank" >ENTRADAS</a>
 
                     </div>
-                    <!--
+                    
                     <div class="col">
 
-                        <a type="button" class="btn btn-primary btn-lg sunset_btn" href="http://sunsetdrive.com.ar/" target="_blank" >INSCRIPCIONES</a>
+                        <a type="button" class="btn btn-primary btn-lg sunset_btn" href="http://sunsetdrive.com.ar/inscripcion" target="_blank" >INSCRIPCIONES</a>
 
                     </div>
-                    -->
+                    
                 </div>
 
             </div>
