Sunset express update

--- a/index.html
+++ b/index.html
@@ -43,15 +43,16 @@
 
         <div class="container text-center">
             <div class="row">
-                <h1>Sunset Drive Séptima Edición</h1>
+                <h1>Sunset Drive Express - 7 de junio</h1>
+                <!--
                 <div class="col">
                     <a type="button" class="btn btn-primary btn-lg sunset_btn" href="http://sunsetdrive.com.ar/entradas"
                         target="_blank">ENTRADAS</a>
                 </div>
-
+                -->
                 <div class="col">
                     <a type="button" class="btn btn-primary btn-lg sunset_btn"
-                        href="http://sunsetdrive.com.ar/inscripcion" target="_blank">INSCRIPCIONES</a>
+                        href="http://sunsetdrive.com.ar/inscripcion-express" target="_blank">INSCRIPCIONES</a>
                 </div>
             </div>
         </div>
